--- a/Portifolio-HTML-e-CSS/index.html
+++ b/Portifolio-HTML-e-CSS/index.html
@@ -12,16 +12,18 @@
     <main>
         <h1>
             Eleve seu negócio digital a outro nível 
-            <strong>com um Front-end de qualidade!
+            <strong class="titilo-destaque">com um Front-end de qualidade!
             </strong></h1>
-            <p>Olá! Sou Joana Santos, desenvolvedora 
+            <p>Olá! Sou Jonathan Costa, desenvolvedora 
             Front-end com especialidade em <strong>React, HTML e
             CSS</strong>. Ajudo pequenos negócios e designers a 
             colocarem em prática boas ideias. Vamos 
             conversar?</p>
+            <!--TODO: Mudar redes sociais-->
             <a href="https://instagram.com/rafaballerini">Instagram</a>
             <a href="https://github.com/guilhermeonrails">GitHub</a>
-            <img src="imagem.png" alt="Foto da Joana Santos programando">
+             <!--TODO: Mudar foto de perfil-->
+            <img src="../img/fotoPerfil.jpg" alt="Foto da Joana Santos programando">
     </main>
     <footer></footer>
 </body>
