--- a/Portifolio-HTML-e-CSS/index.html
+++ b/Portifolio-HTML-e-CSS/index.html
@@ -9,21 +9,21 @@
 </head>
 <body>
     <header></header>
-    <main>
-        <h1>
-            Eleve seu negócio digital a outro nível 
-            <strong class="titilo-destaque">com um Front-end de qualidade!
-            </strong></h1>
-            <p>Olá! Sou Jonathan Costa, desenvolvedora 
-            Front-end com especialidade em <strong>React, HTML e
-            CSS</strong>. Ajudo pequenos negócios e designers a 
-            colocarem em prática boas ideias. Vamos 
-            conversar?</p>
+    <main class="principal">
+        <section class="principal__conteudo">
+            <h1 class="principal__conteudo__titulo">Eleve seu negócio digital a outro nível 
+            <strong class="titilo-destaque">com um Front-end, Back-end e Clouding Computing de qualidade!</strong></h1>
+
+            <p class="principal__conteudo__texto">Olá! Sou Jonathan Costa, densenvolvedor full stack
+            com especialidade em <strong>Cloud Computing AWS</strong>. Ajudo pequenos negócios e designers a 
+            colocarem em prática boas ideias. Vamos conversar?
+            </p>
             <!--TODO: Mudar redes sociais-->
-            <a href="https://instagram.com/rafaballerini">Instagram</a>
-            <a href="https://github.com/guilhermeonrails">GitHub</a>
+            <a href="https://www.instagram.com/jhonfalcon1/">Instagram</a>
+            <a href="https://github.com/JhonCostaDev">GitHub</a>
+        </section>
              <!--TODO: Mudar foto de perfil-->
-            <img src="../img/fotoPerfil.jpg" alt="Foto da Joana Santos programando">
+            <img src="../img/fotoPerfil.jpg" alt="Foto do Jonathan Costa de Perfil" class="foto">
     </main>
     <footer></footer>
 </body>
