--- a/Portifolio-HTML-e-CSS/index.html
+++ b/Portifolio-HTML-e-CSS/index.html
@@ -18,9 +18,11 @@
             com especialidade em <strong>Cloud Computing AWS</strong>. Ajudo pequenos negócios e designers a 
             colocarem em prática boas ideias. Vamos conversar?
             </p>
-            <!--TODO: Mudar redes sociais-->
-            <a href="https://www.instagram.com/jhonfalcon1/">Instagram</a>
-            <a href="https://github.com/JhonCostaDev">GitHub</a>
+            
+            <div class="principal__links">
+                <a href="https://www.linkedin.com/in/jonathan-costa-8633b8224/" class="principal__links__link" target='_blank'>Linkedin</a>
+                <a href="https://github.com/JhonCostaDev" class="principal__links__link" target='_blank'>GitHub</a>
+            </div>
         </section>
              <!--TODO: Mudar foto de perfil-->
             <img src="../img/fotoPerfil.jpg" alt="Foto do Jonathan Costa de Perfil" class="foto">
