add pasta projeto 5, organicacao das pastas

--- a/Portifolio-HTML-e-CSS/myPortifolio/index.html
+++ b/Portifolio-HTML-e-CSS/myPortifolio/index.html
@@ -25,7 +25,7 @@
             </div>
         </section>
              <!--TODO: Mudar foto de perfil-->
-            <img src="../img/fotoPerfil.jpg" alt="Foto do Jonathan Costa de Perfil" class="foto">
+            <img src="img/fotoPerfil.jpg" alt="Foto do Jonathan Costa de Perfil" class="foto">
     </main>
     <footer></footer>
 </body>
